fixing overflow property on search Page to auto

--- a/src/Pages/search/Search.css
+++ b/src/Pages/search/Search.css
@@ -6,7 +6,7 @@
 #searchpage #main-content{
     width: 70%;
     padding-left: 1rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-bottom: 6rem;
 }
 
